Fix download URL

--- a/bin/install
+++ b/bin/install
@@ -56,7 +56,7 @@ get_filename () {
 get_download_url () {
   local -r version="$1"
   local -r filename="$(get_filename "${version}")"
-  echo "https://releases.hashicorp.com/${toolname}/${version}/${filename}"
+  echo "https://github.com/Masterminds/${toolname}/releases/download/v${version}/${filename}"
 }
 
 install "${ASDF_INSTALL_TYPE}" "${ASDF_INSTALL_VERSION}" "${ASDF_INSTALL_PATH}"
